Added submit answer alignment, submit answer feedback, ignore scoring and ignore answer evaluation for multichoice

--- a/css/multichoice.css
+++ b/css/multichoice.css
@@ -377,3 +377,19 @@
   right: auto;
   padding-top: 2px;
 }
+
+.h5p-multichoice .h5p-question-content .submit-answer-feedback {
+  color: black;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+}
+
+.h5p-multichoice .h5p-question-buttons.right-align {
+  width: 100% !important;
+  text-align: right !important;
+}
+
+.h5p-multichoice .h5p-question-buttons.right-align .h5p-joubelui-button,
+.h5p-multichoice .h5p-question-buttons.right-align .h5p-joubelui-button:first-child:last-child {
+  margin: 0 0 0 0.5em !important;
+}
